YAMLScript: Add 'make clean' support

--- a/impls/yamlscript/Makefile
+++ b/impls/yamlscript/Makefile
@@ -9,3 +9,6 @@ test: test-0
 
 test-%:
 	@$(MAKE) --no-print-directory -C $(ROOT) test^yamlscript^step$(@:test-%=%)
+
+clean:
+	$(RM) -r ../python/__pycache__/
