WIP - step5_tco
Use goto and move all special forms into the eval function

--- a/impls/yamlscript/Makefile
+++ b/impls/yamlscript/Makefile
@@ -18,6 +18,7 @@ ALL_TESTS := \
     test-2 \
     test-3 \
     test-4 \
+    test-5 \
 
 
 default:
@@ -30,7 +31,7 @@ test:
 test-all: $(ALL_TESTS)
 
 $(ALL_TESTS):
-	@$(MAKE) --no-print-directory -C $(ROOT) test^yamlscript^step$(@:test-%=%) \
+	@$(MAKE) -C $(ROOT) test^yamlscript^step$(@:test-%=%) \
 	    DEFERRABLE=$(DEFERRABLE) OPTIONAL=$(OPTIONAL)
 
 clean:
