YAMLScript: Pass step6 all

--- a/impls/yamlscript/Makefile
+++ b/impls/yamlscript/Makefile
@@ -12,13 +12,7 @@ export DEFERRABLE := 1
 export OPTIONAL := 1
 endif
 
-ALL_TESTS := \
-    test-0 \
-    test-1 \
-    test-2 \
-    test-3 \
-    test-4 \
-    test-5 \
+ALL_TESTS := $(shell echo test-{0..6})
 
 
 default:
@@ -31,7 +25,7 @@ test:
 test-all: $(ALL_TESTS)
 
 $(ALL_TESTS):
-	@$(MAKE) --no-print-directory -C $(ROOT) test^yamlscript^step$(@:test-%=%) \
+	$(MAKE) --no-print-directory -C $(ROOT) test^yamlscript^step$(@:test-%=%) \
 	    DEFERRABLE=$(DEFERRABLE) OPTIONAL=$(OPTIONAL)
 
 clean:
