--- a/Makefile.impls
+++ b/Makefile.impls
@@ -159,6 +159,7 @@ objc_STEP_TO_PROG =          impls/objc/$($(1))
 objpascal_STEP_TO_PROG =     impls/objpascal/$($(1))
 ocaml_STEP_TO_PROG =         impls/ocaml/$($(1))
 perl_STEP_TO_PROG =          impls/perl/$($(1)).pl
+perl.2_STEP_TO_PROG =        impls/perl.2/$($(1)).pl
 perl6_STEP_TO_PROG =         impls/perl6/$($(1)).pl
 php_STEP_TO_PROG =           impls/php/$($(1)).php
 picolisp_STEP_TO_PROG =      impls/picolisp/$($(1)).l
@@ -195,6 +196,6 @@ vimscript_STEP_TO_PROG =     impls/vimscript/$($(1)).vim
 wasm_STEP_TO_PROG =          impls/wasm/$($(1)).$(if $(filter lucet,$(wasm_MODE)),so,wasm)
 wren_STEP_TO_PROG =          impls/wren/$($(1)).wren
 yorick_STEP_TO_PROG =        impls/yorick/$($(1)).i
-yamlscript_STEP_TO_PROG =    impls/yamlscript/$($(1)).pl
+yamlscript_STEP_TO_PROG =    impls/yamlscript/$($(1)).ys
 xslt_STEP_TO_PROG =          impls/xslt/$($(1))
 zig_STEP_TO_PROG =           impls/zig/$($(1))
