--- a/impls/yamlscript/Makefile
+++ b/impls/yamlscript/Makefile
@@ -22,6 +22,15 @@ test:
 	$(MAKE) test-all BASIC=$(BASIC) |& \
 	    grep -E '(^TEST RESULTS|: .* tests$$)'
 
+test-ys:
+	../perl.2/repl eg/99-bottles.mal 3 >/dev/null
+	../perl.2/repl eg/99-bottles-0.ys 3 >/dev/null
+	../perl.2/repl eg/99-bottles-1.ys 3 >/dev/null
+	:
+	../perl.2/repl lib/ys.ys eg/99-bottles.mal 3 >/dev/null
+	../perl.2/repl lib/ys.ys eg/99-bottles-0.ys 3 >/dev/null
+	../perl.2/repl lib/ys.ys eg/99-bottles-1.ys 3 >/dev/null
+
 test-all: $(ALL_TESTS)
 
 $(ALL_TESTS):
