--- a/impls/yamlscript/Makefile
+++ b/impls/yamlscript/Makefile
@@ -10,6 +10,7 @@ export DEFERRABLE := 1
 export OPTIONAL := 1
 endif
 
+impl ?= perl.2
 IMPL ?= yamlscript
 
 ALL_TESTS := $(shell echo test-{{0..9},A})
@@ -23,13 +24,15 @@ test:
 	    grep -E '(^TEST RESULTS|: .* tests$$)'
 
 test-ys:
-	../perl.2/repl eg/99-bottles.mal 3 >/dev/null
-	../perl.2/repl eg/99-bottles-0.ys 3 >/dev/null
-	../perl.2/repl eg/99-bottles-1.ys 3 >/dev/null
+	$(MAKE) -C ../$(impl) test
 	:
-	../perl.2/repl lib/ys.ys eg/99-bottles.mal 3 >/dev/null
-	../perl.2/repl lib/ys.ys eg/99-bottles-0.ys 3 >/dev/null
-	../perl.2/repl lib/ys.ys eg/99-bottles-1.ys 3 >/dev/null
+	../$(impl)/repl eg/99-bottles.mal 3 >/dev/null
+	../$(impl)/repl eg/99-bottles-0.ys 3 >/dev/null
+	../$(impl)/repl eg/99-bottles-1.ys 3 >/dev/null
+	:
+	../$(impl)/repl lib/ys.ys eg/99-bottles.mal 3 >/dev/null
+	../$(impl)/repl lib/ys.ys eg/99-bottles-0.ys 3 >/dev/null
+	../$(impl)/repl lib/ys.ys eg/99-bottles-1.ys 3 >/dev/null
 
 test-all: $(ALL_TESTS)
 
