--- a/Makefile.impls
+++ b/Makefile.impls
@@ -53,7 +53,8 @@ step5_EXCLUDES += powershell  # too slow for 10,000
 step5_EXCLUDES += prolog      # no iteration (but interpreter does TCO implicitly)
 step5_EXCLUDES += sml         # not implemented :(
 step5_EXCLUDES += $(if $(filter cpp,$(haxe_MODE)),haxe,) # cpp finishes 10,000, segfaults at 100,000
-step5_EXCLUDES += xslt		  # iteration cannot be expressed
+step5_EXCLUDES += xslt        # iteration cannot be expressed
+step5_EXCLUDES += yamlscript  # XXX deep recursion bug
 
 dist_EXCLUDES += mal
 # TODO: still need to implement dist
